[package]
name = "happier-relay"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["William Desportes <williamdes@wdes.fr>"]
description = "Single-tenant Rust relay implementing the happier (slopus/happy fork) wire protocol."
license = "MPL-2.0"
publish = false

[features]
# The whole crate is opt-in. Build with
# `cargo build -p happier-relay --features happier-dev`. The bin and
# the integration test below carry `required-features = ["happier-dev"]`
# so they're silently skipped when the feature isn't set.
default = []
happier-dev = []

[[bin]]
name = "happier-relay"
path = "src/main.rs"
required-features = ["happier-dev"]

[[test]]
name = "auth_e2e"
path = "tests/auth_e2e.rs"
required-features = ["happier-dev"]

[[test]]
name = "socket_e2e"
path = "tests/socket_e2e.rs"
required-features = ["happier-dev"]

[[test]]
name = "sessions_e2e"
path = "tests/sessions_e2e.rs"
required-features = ["happier-dev"]

[[test]]
name = "kv_e2e"
path = "tests/kv_e2e.rs"
required-features = ["happier-dev"]

[[test]]
name = "artifacts_e2e"
path = "tests/artifacts_e2e.rs"
required-features = ["happier-dev"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Same allows as catbus-agent — narrowing casts are deliberate here too.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "process", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
ed25519-dalek = "2"
base64 = "0.22"
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
thiserror = "2"
anyhow = "1"
# socket.io v4 server. The `tracing` feature wires its internal logs
# into our tracing-subscriber output; `extensions` gives us per-socket
# storage for the authed user id.
socketioxide = { version = "0.18", features = ["tracing", "extensions", "state"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.8"
# Minimal Engine.IO / socket.io client for integration tests. Two
# sockets connect, exchange a machine-update, assert it routed.
rust_socketio = { version = "0.6", features = ["async"] }
futures-util = "0.3"
