[package]
name = "happier-relay"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["William Desportes <williamdes@wdes.fr>"]
description = "Single-tenant Rust relay implementing the happier (slopus/happy fork) wire protocol."
license = "MPL-2.0"
publish = false

[features]
default = []
# Historical opt-in flag. Now an empty alias kept so older `cargo
# build --features happier-dev` invocations still work — the crate
# builds unconditionally since it ships in the tab-atelier deb.
happier-dev = []

[[bin]]
name = "happier-relay"
path = "src/main.rs"

[[test]]
name = "auth_e2e"
path = "tests/auth_e2e.rs"

[[test]]
name = "socket_e2e"
path = "tests/socket_e2e.rs"

[[test]]
name = "sessions_e2e"
path = "tests/sessions_e2e.rs"

[[test]]
name = "kv_e2e"
path = "tests/kv_e2e.rs"

[[test]]
name = "artifacts_e2e"
path = "tests/artifacts_e2e.rs"

[[test]]
name = "tab_input_e2e"
path = "tests/tab_input_e2e.rs"

[[test]]
name = "shared_account_e2e"
path = "tests/shared_account_e2e.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Same allows as catbus-agent — narrowing casts are deliberate here too.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "process", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
ed25519-dalek = "2"
base64 = "0.22"
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
thiserror = "2"
anyhow = "1"
# socket.io v4 server. The `tracing` feature wires its internal logs
# into our tracing-subscriber output; `extensions` gives us per-socket
# storage for the authed user id.
socketioxide = { version = "0.18", features = ["tracing", "extensions", "state"] }
# For converting tokio::broadcast::Receiver into a Stream used by axum's
# SSE response. Tiny crate (~30 KB compiled), already a transitive dep.
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
# Used by the session dispatchers in main.rs to re-parse the raw
# query string into two different typed structs (one for the tab
# path, one for the SQL-backed sessions path) without forcing a
# single Query<T> extractor at the handler level. Already in the
# transitive tree via axum.
serde_urlencoded = "0.7"
# TLS listener so the happier mobile app (cleartext-blocked on
# modern Android / iOS) can actually connect. Reads the same
# self-signed cert tab-atelier already generates for its own
# port 7891.
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.8"
# Minimal Engine.IO / socket.io client for integration tests. Two
# sockets connect, exchange a machine-update, assert it routed.
rust_socketio = { version = "0.6", features = ["async"] }
futures-util = "0.3"
